fixing background color cutoff

--- a/frontend/src/assets/style/layout-new.scss
+++ b/frontend/src/assets/style/layout-new.scss
@@ -38,6 +38,11 @@
   cursor: pointer;
 }
 
+html,
+body {
+  min-height: 100%;
+}
+
 html {
   font-smooth: always !important;
   -webkit-font-smoothing: antialiased !important;
@@ -74,15 +79,11 @@ body {
 }
 
 #app {
-  height: auto;
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   z-index: 2;
-  position: absolute;
-  top: 0;
-  left: 0;
   display: flex;
-  height: 100%;
+  flex-direction: column;
 }
 
 .new-loader {
